Prepare Pexip packaging.

--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,15 @@
 Source: yajl
 Section: libs
 Priority: optional
-Maintainer: John Stamp <jstamp@users.sourceforge.net>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: John Stamp <jstamp@users.sourceforge.net>
 Build-Depends: debhelper (>= 11), cmake, doxygen
 Standards-Version: 4.2.1
 Rules-Requires-Root: no
 Homepage: https://lloyd.github.io/yajl/
 Vcs-Browser: https://github.com/jstamp/yajl
 Vcs-Git: https://github.com/jstamp/yajl.git
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ bookworm
 
 Package: libyajl2
 Architecture: any
